--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
 }
 
 .menu-item{
-    height: 25px;
-    width: 200px;
+    flex-grow: 1;
+    height: 20px;
     border: 1px solid black;
     border-radius: 2%;
     margin: 5px;
@@ -25,8 +25,19 @@
 
 #content{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     margin-top: 20px;
     margin-left: 5px;
+    justify-content: center;
+}
+
+.table{
+    margin-left:auto;
+    margin-right:auto;
+    table-layout:fixed;
+}
+
+#add-new{
+    color: blue;
 }
