--- a/html/style.css
+++ b/html/style.css
@@ -1,3 +1,7 @@
+header h1{
+    display: inline;
+}
+
 .site-title a{
     color: black;
     text-decoration: none;
@@ -29,10 +33,11 @@
 
 #content{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     margin-top: 20px;
     margin-left: 5px;
+    margin-right: 5px;
     justify-content: center;
 }
 
@@ -40,16 +45,62 @@
     font-size: 1.3vw;
 }
 
-#add-new{
-    color: blue;
+#search_bar{
+    width: 100%;
 }
 
-#confirm-button{
+#search-bar input{
+    width: 90%;
+}
+
+#search-bar a{
+    color: black;
+    text-decoration: none;
+}
+
+table{
+    width: 100%;
+}
+
+table, td, th{
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 10px;
+}
+
+input.input-attribute{
+    width:100%;
+}
+
+#buttons{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#add-new-button{
     height: 20px;
+    width: 100%;
     border: 1px solid black;
     border-radius: 2%;
     margin: 5px;
     background-color: lightblue;
+    text-align: center;
+}
+
+#add-new-button a{
+    color: black;
+    text-decoration: none;
+}
+
+#confirm-button{
+    height: 20px;
+    width: 50%;
+    border: 1px solid black;
+    border-radius: 2%;
+    margin: 5px;
+    background-color: lightgreen;
     text-align: center;
 }
 
@@ -60,6 +111,7 @@
 
 #cancel-button{
     height: 20px;
+    width: 50%;
     border: 1px solid black;
     border-radius: 2%;
     margin: 5px;
