--- a/html/style.css
+++ b/html/style.css
@@ -15,6 +15,7 @@ header h1{
 
 .menu-item{
     flex-grow: 1;
+    flex-basis: 0;
     height: 20px;
     border: 1px solid black;
     border-radius: 2%;
@@ -49,8 +50,12 @@ header h1{
     width: 100%;
 }
 
+#search-bar select{
+    width: 30%;
+}
+
 #search-bar input{
-    width: 90%;
+    width: 60%;
 }
 
 #search-bar a{
@@ -69,6 +74,10 @@ table, td, th{
 }
 
 input.input-attribute{
+    width:100%;
+}
+
+select.input-attribute{
     width:100%;
 }
 
