Added ADD to patients

--- a/node/views/patients.hbs
+++ b/node/views/patients.hbs
@@ -44,7 +44,7 @@
     
     <div id="buttons">
         <div id = "add-new-button">
-            <a href = "#">Add Patients</a>
+            <a href = "/add_patients.hbs">Add Patients</a>
         </div>
     </div>
             
