Completed Patient ADD

--- a/node/views/add_patients.hbs
+++ b/node/views/add_patients.hbs
@@ -15,17 +15,17 @@
             </tr>
 
             <tr id = "Patients-input">
-                <td><input name = first_name id = first_name class="input-attribute"></td>
-                <td><input name = last_name id = last_name class="input-attribute"></td>
-                <td><input name = age id = age class="input-attribute"></td>
-                <td><input name = phone_number id = phone_number class="input-attribute"></td>
-                <td><select name = esi_level id = esi_level class="input-attribute">
+                <td><input type="text" name = first_name id = first_name class="input-attribute"></td>
+                <td><input type="text" name = last_name id = last_name class="input-attribute"></td>
+                <td><input type="number" name = age id = age class="input-attribute"></td>
+                <td><input type="text" name = phone_number id = phone_number class="input-attribute"></td>
+                <td><select type="text" name = esi_level id = esi_level class="input-attribute">
                     <option value = "" selected></option>
-                    <option value = "1">1 - Critical</option>
-                    <option value = "2">2 - Severe</option>
-                    <option value = "3">3 - Moderate</option>
-                    <option value = "4">4 - Mild</option>
-                    <option value = "5">5 - Non-Urgent</option>
+                    <option value = "1 - Emergency">1 - Emergency</option>
+                    <option value = "2 - Urgent">2 - Urgent</option>
+                    <option value = "3 - Moderate">3 - Moderate</option>
+                    <option value = "4 - Mild">4 - Mild</option>
+                    <option value = "5 - Non-Urgent">5 - Non-Urgent</option>
                 </select></td>
             </tr>
 
