--- a/node/views/add_patients.hbs
+++ b/node/views/add_patients.hbs
@@ -18,7 +18,7 @@
                 <td><input type="text" name = first_name id = first_name class="input-attribute"></td>
                 <td><input type="text" name = last_name id = last_name class="input-attribute"></td>
                 <td><input type="number" name = age id = age class="input-attribute"></td>
-                <td><input type="text" name = phone_number id = phone_number class="input-attribute"></td>
+                <td><input type="tel" name = phone_number id = phone_number pattern="[0-9]{3}-[0-9]{4}" class="input-attribute" required></td>
                 <td><select type="text" name = esi_level id = esi_level class="input-attribute">
                     <option value = "" selected></option>
                     <option value = "1 - Emergency">1 - Emergency</option>
