Added treatments.hbs main page

--- a/node/views/layouts/main.hbs
+++ b/node/views/layouts/main.hbs
@@ -14,6 +14,9 @@
       {{#if is_patients}}
       <h1 class="site-title"><a href="/patients.hbs">/ Patients</a></h1>
       {{/if}}
+      {{#if is_treatments}}
+      <h1 class="site-title"><a href="/treatments.hbs">/ Treatments</a></h1>
+      {{/if}}
     </header>
 
     <main>
