departments CRUD works

--- a/node/views/doctors.hbs
+++ b/node/views/doctors.hbs
@@ -29,7 +29,7 @@
                 <td>{{this.last_name}}</td>
                 <td>{{this.specialization}}</td>
                 <th>
-                    <form id = update-patient method="GET" action="/update_doctors.hbs">
+                    <form id = update-doctor method="GET" action="/update_doctors.hbs">
                         <input type="hidden" name="doctor_id" value="{{this.doctor_id}}">
                         <input type="submit" value="Update">
                     </form>
