ADD doctors_departments works

--- a/node/views/layouts/main.hbs
+++ b/node/views/layouts/main.hbs
@@ -26,6 +26,9 @@
       {{#if is_patients_treatments}}
       <h1 class="site-title"><a href="/patients_treatments.hbs">/ Patients_Treatments</a></h1>
       {{/if}}
+      {{#if is_doctors_departments}}
+      <h1 class="site-title"><a href="/doctors_departments.hbs">/ Doctors_Departments</a></h1>
+      {{/if}}
     </header>
 
     <main>
