--- a/node/views/patients_treatments.hbs
+++ b/node/views/patients_treatments.hbs
@@ -1,6 +1,6 @@
 <div id="content">
     <form id="search-bar" method="GET" action="/patients_treatments.hbs">
-        <select name="filter_attributes" id="filter-attributes">
+        <select name="filter_attributes" id="filter_attributes">
             <option value="p_name">Patient's Name</option>
             <option value="t_desc">Treatment Description</option>
         </select>
