ADD/DELETE implemented for Appointments

--- a/node/views/layouts/main.hbs
+++ b/node/views/layouts/main.hbs
@@ -20,6 +20,9 @@
       {{#if is_treatments}}
       <h1 class="site-title"><a href="/treatments.hbs">/ Treatments</a></h1>
       {{/if}}
+      {{#if is_appointments}}
+      <h1 class="site-title"><a href="/appointments.hbs">/ Appointments</a></h1>
+      {{/if}}
       {{#if is_departments}}
       <h1 class="site-title"><a href="/departments.hbs">/ Departments</a></h1>
       {{/if}}
