--- a/node/views/update_treatments.hbs
+++ b/node/views/update_treatments.hbs
@@ -20,7 +20,7 @@
 
             <tr class = "Treatments-input">
                 <td><input type = text name="description" id = description class="input-attribute"></td>
-                <td><input type = number name="cost" id = cost class="input-attribute"></td>
+                <td><input type="number" name="cost" id="cost" class="input-attribute" min="0"></td>
             </tr>
 
         </table>
