--- a/node/views/add_treatments.hbs
+++ b/node/views/add_treatments.hbs
@@ -13,7 +13,7 @@
 
             <tr class = "Treatments-info">
                 <td><input type = "text" name = description id = description class="input-attribute"></td>
-                <td><input type = "number" name = cost id = cost class="input-attribute"></td>
+                <td><input type="number" name="cost" id="cost" class="input-attribute" min="0"></td>
             </tr>
 
         </table>
