--- a/node/views/departments.hbs
+++ b/node/views/departments.hbs
@@ -8,7 +8,7 @@
         <input type="text" name=search_entry id = search_entry>
         <input type="submit">
         <a href="/departments.hbs"><button type="button">Reset</button></a>
-    </div>
+    </form>
 
     <div id = display-table>
         <table>
